# calcio_splash

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  make_static_website.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  tsconfig.json  webpack.config.js
calcio_splash/: admin.py  apps.py  context_processor.py  forms.py  helpers.py  models.py  settings.py  settings_production.py  urls.py  views.py  wsgi.py
calcio_splash/migrations/: 0001_initial.py  0002_match.py  0003_goal.py  0004_auto_20170425_1233.py  0005_auto_20170425_1237.py  0006_auto_20170425_1303.py  0007_auto_20170507_1101.py  0008_team_gender.py  0009_auto_20170720_1644.py  0010_match_end_secondo_tempo.py  0011_auto_20170720_1651.py  0012_auto_20170721_1853.py  0013_group_is_final.py  0014_auto_20170803_1728.py  0015_team_year.py  0016_player_teams.py  0017_delete_player_team.py  0018_auto_20180616_1942.py  0019_auto_20190718_2128.py  0020_beachmatch.py  0021_auto_20190728_1126.py  0022_alter_match_next_match_alter_player_teams.py  0023_alter_beachmatch_options_alter_match_options.py  0024_remove_match_next_match.py  0025_alter_match_team_a_alter_match_team_b.py  0026_beachmatch_ended.py  0027_alter_beachmatch_team_a_alter_beachmatch_team_b.py  0028_alter_group_options_group_ordering.py  0029_player_nickname.py  0030_match_brackets_offset.py  0031_beachmatch_brackets_offset.py
calcio_splash/static/: site.webmanifest
calcio_splash/static/css/: brackets.css  custom.css  default.css  livematch.css  style.css
calcio_splash/static/js/: beach_volley.js  calcio_splash.js  custom.js
calcio_splash/static/livematch/: main.js  main.js.LICENSE.txt
calcio_splash/templates/: albodoro.html  albomarcatori.html  base.html  contacts.html  fuoriposto.html  ga.html  group.html  index.html  index_old.html  iscrizioni.html  match.html  match_template.html  matches.html  menu.html  regulation.html  regulation_beach.html  team.html  teams.html  tournament.html  tournament_brackets.html
calcio_splash/templates/admin/: admin-base.html  base_site.html  index.html  match_beach.html  match_goal.html
calcio_splash/templates/errors/: 404.html  500.html
calcio_splash/templatetags/: filters.py
calciosplash/livematch/: main.js
fabfile/: __init__.py  fabric.yaml  main.py  settings-default.json  settings-local.json.example  utils.py
livematch/: serializers.py  urls.py  views.py
livematch/src/: App.tsx  AppStore.ts  EllipsableContent.tsx  Loader.tsx  index.ts
livematch/src/beachmatch/: BeachMatchActionsHelper.ts  BeachMatchContainer.tsx  BeachMatchListContainer.tsx  BeachMatchListUI.tsx  BeachMatchReducer.ts  BeachMatchUI.tsx  BeachTeamUI.tsx
livematch/src/soccermatch/: PlayerUI.tsx  (+8 more)
(+3 files in other folders)
