[tool.poetry]
name = "calcio_splash"
version = "0.1.0"
description = ""
authors = ["Stella Margonar <margonar@spaziodati.eu>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.3"
django-storages = "^1.12.3"
django-dbbackup = "^4.0.0b0"
boto3 = "^1.23.4"
djangorestframework = "^3.13.1"
uWSGI = "^2.0.21"
sentry-sdk = "^1.9.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}

[tool.poetry.group.dev.dependencies]
fabric = "^3.1.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip_glob = ["*/node_modules/*.py", "*/migrations/*.py",]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "DJANGO_THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_django = ["django"]

[tool.black]
line-length = 119
skip-string-normalization = true
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.venv
  | migrations
  | node_modules
)/
'''
